[package]
name = "iron-csrf"
version = "0.2.4"
authors = [ "heartsucker <heartsucker@autistici.org>" ]
description = "CSRF protection for the web framework Iron"
homepage = "https://github.com/heartsucker/iron-csrf"
repository = "https://github.com/heartsucker/iron-csrf"
documentation = "https://docs.rs/iron-csrf"
readme = "README.md"
license = "MIT"
keywords = [ "iron", "csrf", "web", "security" ]
categories = [ "web-programming", "authentication", "cryptography" ]

[badges]
travis-ci = { repository = "heartsucker/iron-csrf", branch = "master" }
appveyor = { repository = "heartsucker/iron-csrf", branch = "master", service = "github" }

[lib]
name = "iron_csrf"
path = "./src/lib.rs"

[dependencies]
chrono = "0.3"
cookie = { version = "0.8", features = [ "percent-encode" ] }
csrf = { version = "0.2.2", features = [ "iron" ] }
data-encoding = "2.0.0-rc.1"
hyper = "0.10"
iron = "0.5"
log = "0.3"
ring = "0.11"
rust-crypto = "0.2"
urlencoded = "0.5"

[dev-dependencies]
env_logger = "0.4"
iron-test = "0.5"
lazy_static = "0.2"
