[package]
name = "iron-csrf"
version = "0.3.1"
authors = [ "heartsucker <heartsucker@autistici.org>" ]
description = "CSRF protection for the web framework Iron"
homepage = "https://github.com/heartsucker/iron-csrf"
repository = "https://github.com/heartsucker/iron-csrf"
documentation = "https://docs.rs/iron-csrf"
readme = "README.md"
license = "MIT"
keywords = [ "iron", "csrf", "web", "security" ]
categories = [ "web-programming", "authentication", "cryptography" ]
edition = "2018"

[badges]
travis-ci = { repository = "heartsucker/iron-csrf", branch = "master" }
appveyor = { repository = "heartsucker/iron-csrf", branch = "master", service = "github" }

[lib]
name = "iron_csrf"
path = "./src/lib.rs"

[dependencies]
cookie = { version = "0.14", features = [ "percent-encode" ] }
csrf = { version = "0.4", features = [ "iron" ] }
data-encoding = "2"
hyper = "0.13"
iron = "0.6"
log = "0.4"
time = "0.2"
urlencoded = "0.6"

[dev-dependencies]
iron-test = "0.6"
lazy_static = "1"
simplelog = "^0.8"
